# Primitive-Geometric-Model-Based-6D-Pose-Estimation

./: .gitattributes  README.md  handover_robot.7z
Robot_gr_ws/.catkin_tools/profiles/default/: build.yaml  devel_collisions.txt
Robot_gr_ws/src/Yolov8_ros/yolov8_ros/launch/: yolo_v8.launch  yolo_v8_sim.launch
Robot_gr_ws/src/Yolov8_ros/yolov8_ros/scripts/: cloud.py  gazebo_screenshot.py  yolov8_predict.py  yolov8_sim.py  yolov8_sim_detect.py
Robot_gr_ws/src/Yolov8_ros/yolov8_ros_msgs/: CMakeLists.txt
Robot_gr_ws/src/Yolov8_ros/yolov8_ros_msgs/msg/: BoundingBox.msg  Instance_seg.msg  Instance_segs.msg
Robot_gr_ws/src/handover_robot/robot_description/: package.xml
Robot_gr_ws/src/handover_robot/robot_description/urdf/: mirobot_urdf_2_rg2_gripper_85_gr_test.xacro
Robot_gr_ws/src/handover_robot/robot_gazebo/: CMakeLists.txt  package.xml
Robot_gr_ws/src/handover_robot/robot_gripper_moveit_config/: .setup_assistant  CMakeLists.txt
robot_description/urdf/: mirobot_urdf_2_realsense.xacro
robot_description/urdf/realsense/: d435i.xacro
robot_gazebo/config/mirobot_gr/: mirobot_trajectory_control.yaml
robot_gazebo/scripts/: Pose_est.py
robot_gazebo/world/: handover_place_yolov8_multi_object.world
robot_gripper_moveit_config/: package.xml
robot_gripper_moveit_config/config/: sensors_3d.yaml
robot_gripper_moveit_config/launch/: fake_moveit_controller_manager.launch.xml  gazebo.launch  mirobot_moveit_controller_manager.launch.xml  move_group_bad.launch  move_group_testing.launch  planning_context copy.launch  run_benchmark_ompl.launch
(+31 files in other folders)
